# Jianqiao

./: AdminDashboardView.cpp  AdminDashboardView.h  AdminLoginView.cpp  AdminLoginView.h  AdminLoginView.qss  AdminModule.cpp  AdminModule.h  AppCardWidget.cpp  AppCardWidget.h  AppStatus.h  AppStatusBar.cpp  AppStatusBar.h  AppStatusModel.cpp  AppStatusModel.h  CMakeLists.txt  DetectionResultDialog.cpp  DetectionResultDialog.h  FlowLayout.cpp  FlowLayout.h  HotkeyEditDialog.cpp  HotkeyEditDialog.h  HoverIconWidget.cpp  HoverIconWidget.h  JianqiaoCoreShell.cpp  JianqiaoCoreShell.h  JianqiaoSystem.exe.manifest  README.md  SystemInteractionModule.cpp  SystemInteractionModule.h  UserModeModule.cpp  UserModeModule.h  UserView.cpp  UserView.h  WhitelistManagerView.cpp  WhitelistManagerView.h  appicon.rc  common_types.h  config.json  log.txt  main.cpp  (+3 more)
.cursor/rules/: v1.mdc  v2.mdc
doc/: 开发文档.txt  开发记录.txt  文档补充.txt  程序评估.txt  规则.txt
styles/: AppCardWidget.qss  UserView.qss
